<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="title">Judul</string>
    <string name="description">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="imdb">IMDb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>