<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#664A4949"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/release_date"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/description"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/vote_average"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/imdb"
                android:textColor="@color/orange"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>






<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageView-->
<!--            android:id="@+id/img_poster"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            tools:src="@tools:sample/avatars"/>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_title"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/title"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_description"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:maxLines="2"-->
<!--                android:ellipsize="end"-->
<!--                android:text="@string/description"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:textSize="12sp"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_release_date"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/release_date"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:textStyle="italic"-->
<!--                android:textSize="10sp"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_vote_average"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/vote_average"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="10sp"/>-->

<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height=".5dp"-->
<!--        android:background="@color/black"-->
<!--        android:layout_marginTop="8dp"/>-->

</RelativeLayout>